# SkyTri

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SETUP.txt
include/skytri/: cloth.h  mesh.h  model.h  root_directory.h
shaders/: 3.1.materials.frag  cloth.frag  kuwahara.frag  post.frag  post_dist.frag  post_pixel.frag  toon_shader.frag
src/: Experiments.cpp  Source.cpp  glad.c  stb_image.cpp
